--- a/apps/templates/accounts/login.html
+++ b/apps/templates/accounts/login.html
@@ -14,6 +14,7 @@
                     <div class="card">
                         
                         <div class="card-header text-center py-4">
+                            <img src="{{ url_for('static', filename='assets/img/logo.png') }}" alt="Logo" class="mb-3" style="max-width: 150px;">
                             <h4 class="title">
                                 Sign IN
                             </h4>
