--- a/apps/templates/includes/footer.html
+++ b/apps/templates/includes/footer.html
@@ -13,7 +13,7 @@
             </li>
         </ul>
         <div class="copyright">
-            &copy; <a target="_blank" href="https://bit.ly/3fKQZaL">Creative Tim</a> - coded by AppSeed.
+            &copy; <a target="_blank" href="https://danielprazeres.com">Daniel Prazeres</a> - coded by Daniel Prazeres.
         </div>
     </div>
 </footer>
