--- a/apps/templates/includes/navigation.html
+++ b/apps/templates/includes/navigation.html
@@ -9,7 +9,7 @@
                             <span class="navbar-toggler-bar bar3"></span>
                         </button>
                     </div>
-                    <a class="navbar-brand" href="javascript:void(0)">Dashboard</a>
+                    <a class="navbar-brand" href="javascript:void(0)">HUB M Conf&A</a>
                 </div>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -64,7 +64,7 @@
                             </a>
                             <ul class="dropdown-menu dropdown-navbar">
                                 <li class="nav-link">
-                                    <a href="/user.html" class="nav-item dropdown-item">Profile</a>
+                                    <a href="{{ url_for('authentication_blueprint.customers_list') }}" class="nav-item dropdown-item">Clientes</a>
                                 </li>
                                 <li class="dropdown-divider"></li>
                                 <li class="nav-link">
