--- a/apps/templates/includes/scripts.html
+++ b/apps/templates/includes/scripts.html
@@ -1,5 +1,7 @@
 <!--   Core JS Files   -->
 <script src="{{ config.ASSETS_ROOT }}/js/core/jquery.min.js"></script>
+<!-- jQuery UI -->
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
 <script src="{{ config.ASSETS_ROOT }}/js/core/popper.min.js"></script>
 <script src="{{ config.ASSETS_ROOT }}/js/core/bootstrap.min.js"></script>
 <script src="{{ config.ASSETS_ROOT }}/js/plugins/perfect-scrollbar.jquery.min.js"></script>
