--- a/apps/templates/layouts/base.html
+++ b/apps/templates/layouts/base.html
@@ -29,6 +29,8 @@
     <!--     Fonts and icons     -->
     <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,600,700,800" rel="stylesheet"/>
     <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
+    <!-- jQuery UI CSS -->
+    <link href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css" rel="stylesheet"/>
     <!-- Nucleo Icons -->
     <link href="{{ config.ASSETS_ROOT }}/css/nucleo-icons.css" rel="stylesheet"/>
     <!-- CSS Files -->
