--- a/apps/templates/home/page-403.html
+++ b/apps/templates/home/page-403.html
@@ -14,13 +14,13 @@
                     <div class="card">
                         <div class="card-header text-center py-4">
                             <h3 class="title">
-                                Error 403
+                                Erro 403
                             </h3>
                         </div>
                         <div class="card-body px-2 py-2">
 
                             <p class="text-center">
-                                Access denied - Please contact support.
+                                Acesso negado - Tente logar novamente ou contate o suporte.
                             </p>
 
                         </div>
