--- a/apps/templates/layouts/base.html
+++ b/apps/templates/layouts/base.html
@@ -1,18 +1,4 @@
-<!--
-=========================================================
-* * Black Dashboard - v1.0.1
-=========================================================
 
-* Product Page: https://www.creative-tim.com/product/black-dashboard
-* Copyright 2019 Creative Tim (https://www.creative-tim.com)
-
-
-* Coded by Creative Tim
-
-=========================================================
-
-* The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
--->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -23,7 +9,7 @@
     <link rel="icon" type="image/png" href="{{ config.ASSETS_ROOT }}/img/favicon.png">
 
     <title>
-        Flask Dashboard Black - {% block title %}{% endblock %} | AppSeed
+        M Conf&A - {% block title %}{% endblock %}
     </title>
 
     <!--     Fonts and icons     -->
