--- a/apps/static/assets/scss/black-dashboard/custom/_variables.scss
+++ b/apps/static/assets/scss/black-dashboard/custom/_variables.scss
@@ -97,7 +97,7 @@ $default-color-opacity:      rgba(182, 182, 182, .6) !default;
 $orange-color:               #f96332 !default;
 
 $default:       #344675 !default; // EDIT for customization
-$primary:       #e14eca !default; // EDIT for customization
+$primary:       #1f7489 !default; // EDIT for customization
 $secondary:     #f4f5f7 !default; // EDIT for customization
 $success:       #00f2c3 !default; // EDIT for customization
 $info:          #1d8cf8 !default; // EDIT for customization
@@ -108,7 +108,7 @@ $black:         #222a42 !default; // EDIT for customization
 
 // gradient
 $default-states:       #263148 !default;
-$primary-states:       #ba54f5 !default;
+$primary-states:       #05313c !default;
 $success-states:       #0098f0 !default;
 $info-states:          #3358f4 !default;
 $warning-states:       #ff6491 !default;
