--- a/apps/templates/home/customers-list.html
+++ b/apps/templates/home/customers-list.html
@@ -13,7 +13,7 @@
         <div class="card">
           <div class="card-header">
             <h5 class="title">Clientes</h5>
-            <a href="{{ url_for('authentication_blueprint.customers') }}" class="btn btn-primary btn-sm float-right">Novo Cliente</a>
+            <a href="{{ url_for('authentication_blueprint.customers') }}" class="btn btn-primary btn-sm float-right"> <i class="fas fa-plus me-2"></i> Novo Cliente</a>
           </div>
 
           <div class="card-body">
