--- a/apps/templates/includes/navigation.html
+++ b/apps/templates/includes/navigation.html
@@ -55,7 +55,7 @@
                         <li class="dropdown nav-item">
                             <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">
                                 <div class="photo">
-                                    <img src="{{ config.ASSETS_ROOT }}/img/anime3.png" alt="Profile Photo">
+                                    <img src="{{ config.ASSETS_ROOT }}/{{ current_user.profile_photo }}" alt="Profile Photo">
                                 </div>
                                 <b class="caret d-none d-lg-block d-xl-block"></b>
                                 <p class="d-lg-none">
@@ -64,7 +64,7 @@
                             </a>
                             <ul class="dropdown-menu dropdown-navbar">
                                 <li class="nav-link">
-                                    <a href="{{ url_for('authentication_blueprint.customers_list') }}" class="nav-item dropdown-item">Clientes</a>
+                                    <a href="{{ url_for('authentication_blueprint.profile') }}" class="nav-item dropdown-item">Meu Perfil</a>
                                 </li>
                                 <li class="dropdown-divider"></li>
                                 <li class="nav-link">
