--- a/apps/templates/layouts/base-fullscreen.html
+++ b/apps/templates/layouts/base-fullscreen.html
@@ -23,7 +23,7 @@
     <link rel="icon" type="image/png" href="{{ config.ASSETS_ROOT }}/img/favicon.png">
 
     <title>
-        Flask Dashboard Black - {% block title %}{% endblock %} | AppSeed
+        M Conf&A - {% block title %}{% endblock %}
     </title>
     
     <!--     Fonts and icons     -->
