--- a/apps/templates/home/customer-edit.html
+++ b/apps/templates/home/customer-edit.html
@@ -54,21 +54,35 @@
 
               <div class="row mt-4">
                 <div class="col-md-12">
-                  <h6 class="text-primary">Endereço Fiscal</h6>
+                  <h6 class="text-primary">Morada de Faturação</h6>
                   <hr>
                 </div>
               </div>
               <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-12">
+                  <div class="form-group">
+                    <label>Morada</label>
+                    <input type="text" class="form-control" name="morada" value="{{ customer.morada }}" placeholder="Endereço completo">
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-md-4">
                   <div class="form-group">
                     <label>Rua</label>
-                    <input type="text" class="form-control" name="rua" value="{{ customer.rua }}" required>
+                    <input type="text" class="form-control" name="rua" value="{{ customer.rua }}">
                   </div>
                 </div>
                 <div class="col-md-2">
                   <div class="form-group">
                     <label>Número</label>
-                    <input type="text" class="form-control" name="numero" value="{{ customer.numero }}" required>
+                    <input type="text" class="form-control" name="numero" value="{{ customer.numero }}">
+                  </div>
+                </div>
+                <div class="col-md-2">
+                  <div class="form-group">
+                    <label>Lote</label>
+                    <input type="text" class="form-control" name="lote" value="{{ customer.lote }}">
                   </div>
                 </div>
                 <div class="col-md-4">
@@ -82,25 +96,25 @@
                 <div class="col-md-3">
                   <div class="form-group">
                     <label>Código Postal</label>
-                    <input type="text" class="form-control" name="codigo_postal" value="{{ customer.codigo_postal }}" required>
+                    <input type="text" class="form-control" name="codigo_postal" value="{{ customer.codigo_postal }}">
                   </div>
                 </div>
                 <div class="col-md-3">
                   <div class="form-group">
-                    <label>Localidade</label>
-                    <input type="text" class="form-control" name="localidade" value="{{ customer.localidade }}" required>
-                  </div>
-                </div>
-                <div class="col-md-3">
-                  <div class="form-group">
-                    <label>Concelho</label>
-                    <input type="text" class="form-control" name="concelho" value="{{ customer.concelho }}" required>
+                    <label>Cidade</label>
+                    <input type="text" class="form-control" name="cidade" value="{{ customer.cidade }}">
                   </div>
                 </div>
                 <div class="col-md-3">
                   <div class="form-group">
                     <label>Distrito</label>
                     <input type="text" class="form-control" name="distrito" value="{{ customer.distrito }}" required>
+                  </div>
+                </div>
+                <div class="col-md-3">
+                  <div class="form-group">
+                    <label>Localidade</label>
+                    <input type="text" class="form-control" name="localidade" value="{{ customer.localidade }}">
                   </div>
                 </div>
               </div>
