--- a/apps/templates/home/customers.html
+++ b/apps/templates/home/customers.html
@@ -51,10 +51,18 @@
                 </div>
               </div>
 
-              <!-- Endereço Fiscal -->
-              <h6 class="heading-small text-muted mb-4 mt-4">📬 Endereço Fiscal</h6>
+              <!-- Morada de Faturação -->
+              <h6 class="heading-small text-muted mb-4 mt-4">📬 Morada de Faturação</h6>
               <div class="row">
-                <div class="col-md-6 pr-md-1">
+                <div class="col-md-12">
+                  <div class="form-group">
+                    <label>Morada</label>
+                    <input type="text" class="form-control" name="morada" placeholder="Endereço completo">
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-md-4 pr-md-1">
                   <div class="form-group">
                     <label>Rua</label>
                     <input type="text" class="form-control" name="rua">
@@ -66,6 +74,12 @@
                     <input type="text" class="form-control" name="numero">
                   </div>
                 </div>
+                <div class="col-md-2 px-md-1">
+                  <div class="form-group">
+                    <label>Lote</label>
+                    <input type="text" class="form-control" name="lote">
+                  </div>
+                </div>
                 <div class="col-md-4 pl-md-1">
                   <div class="form-group">
                     <label>Complemento</label>
@@ -74,33 +88,33 @@
                 </div>
               </div>
               <div class="row">
-                <div class="col-md-4 pr-md-1">
+                <div class="col-md-3 pr-md-1">
                   <div class="form-group">
                     <label>Código Postal</label>
                     <input type="text" class="form-control" name="codigo_postal">
                   </div>
                 </div>
-                <div class="col-md-4 px-md-1">
+                <div class="col-md-3 px-md-1">
                   <div class="form-group">
-                    <label>Localidade</label>
-                    <input type="text" class="form-control" name="localidade">
+                    <label>Cidade</label>
+                    <input type="text" class="form-control" name="cidade">
                   </div>
                 </div>
-                <div class="col-md-4 pl-md-1">
-                  <div class="form-group">
-                    <label>Concelho</label>
-                    <input type="text" class="form-control" name="concelho">
-                  </div>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-md-6 pr-md-1">
+                <div class="col-md-3 px-md-1">
                   <div class="form-group">
                     <label>Distrito</label>
                     <input type="text" class="form-control" name="distrito">
                   </div>
                 </div>
-                <div class="col-md-6 pl-md-1">
+                <div class="col-md-3 pl-md-1">
+                  <div class="form-group">
+                    <label>Localidade</label>
+                    <input type="text" class="form-control" name="localidade">
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-md-12">
                   <div class="form-group">
                     <label>País</label>
                     <input type="text" class="form-control" name="pais" value="Portugal">
